2014-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm, server-src/amstatus.pl: Fix perl warning.

2014-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Runs.pm, perl/Amanda/CheckDump.pm,
	  perl/Amanda/Device.swg, perl/Amanda/Cleanup.pm,
	  perl/Amanda/Changer/diskflat.pm, perl/Amanda/Changer.pm,
	  perl/Amanda/Vault.pm, perl/Amanda/Index.pm,
	  perl/Amanda/Disklist.swg: Add severity to messages.

2014-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Set write_size, and $dle->{'dsize'}.

2014-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcleanup.pl: Some fixes.

2014-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Fix compilation if SAMBA_CLIENT is not
	  defined.
	* common-src/ammessage.c: Add Message 3600087.

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/CheckDump.pm: Set severity on Message.

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Use g_strdup.

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Output message for selfcheck
	* client-src/client_util.c (backup_support_option): Parse
	  "MESSAGE-JSON".
	* client-src/client_util.h (backup_support_option_s): Add message_json.
	* client-src/selfcheck.c: Parse message from application.
	* common-src/ammessage.c: Add amgtar message.
	* perl/Amanda/Extract.pm (BSU): parse message-json
	* perl/Amanda/Message.pm: Add amgtar message (3700000).
	* server-src/amcheck.c: Remove unused code, small cleanup.
	* installcheck/Installcheck/Application.pm (selfcheck_message):
	  execute application selfcheck with '--message json'.
	* installcheck/amgtar.pl: Call selfcheck_message.

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.h: #ifndef AMMESSAGE_H

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Do not use g_ptr_array_new_full.